<resources>
    <string name="app_name">Petrachat</string>
    <string name="register">Register</string>
    <string name="masukkan_nama_anda">masukkan nama anda</string>
    <string name="masukkan_password">Masukkan password</string>
    <string name="enter_email">enter email</string>
    <string name="petrachat">Petrachat</string>
    <string name="daftar">Daftar</string>
    <string name="log_out">Log Out</string>
    <string name="this_is_main_page">This is Main Page</string>
    <string name="all_users">All Users</string>
    <string name="account_settings">Account Settings</string>
    <string name="selamat_datang_di_petrachat">Selamat datang di PetraChat</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="login">Login</string>
    <string name="login_petrachat">Login petrachat</string>
    <string name="gambar_petra">gambar petra</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="main_account_settings">main_account_settings</string>
    <string name="default_status">Hello petra people, i\'m using Petrachat</string>
    <string name="your_status">Your Status</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="display_name">Display Name</string>
    <string name="user_default_status">User Default Status</string>
    <string name="current_user_status">Current User Status</string>
    <string name="total_friends">Total Friends</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="enter_message">Enter Message...</string>
    <string name="textview">TextView</string>
    <string name="attach_gambar">attach_gambar</string>
    <string name="kirim">Kirim</string>
    <string name="message_text">Message Text</string>
    <string name="display_name2">Display Name</string>
    <string name="_00_00">00:00</string>
    <string name="todo">TODO</string>
    <string name="last_seen">last seen</string>
    <string name="enter_name">Enter name</string>
    <string name="cari_nama">Cari Nama</string>
</resources>
