<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/profile_displayname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="167dp"
        android:layout_marginRight="167dp"
        android:layout_marginBottom="304dp"
        android:autoText="false"
        android:focusableInTouchMode="false"
        android:text="@string/display_name"
        android:textAlignment="center"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="299dp"
        android:layout_height="197dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        app:srcCompat="@drawable/defaultprofile" />

    <TextView
        android:id="@+id/profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="270dp"
        android:text="@string/current_user_status" />

    <TextView
        android:id="@+id/profile_totalfriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="159dp"
        android:text="@string/total_friends" />

    <Button
        android:id="@+id/profile_send_req_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="85dp"
        android:text="@string/send_friend_request" />

    <Button
        android:id="@+id/profile_decline_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:text="Decline Request" />
</RelativeLayout>