<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/message_single_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/custom_bar_image"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/defaultprofile" />

    <TextView
        android:id="@+id/custom_bar_seen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/custom_bar_title"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_toEndOf="@+id/custom_bar_image"
        android:layout_toRightOf="@+id/custom_bar_image"
        android:background="@drawable/message_text_background"
        android:padding="0dp"
        android:paddingLeft="60dp"
        android:text="@string/message_text"
        android:textColor="#fff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/custom_bar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_toEndOf="@+id/custom_bar_image"
        android:text="@string/display_name"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_toRightOf="@+id/custom_bar_image"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/time_text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@+id/custom_bar_title"
        android:text="@string/_00_00"
        android:textSize="12sp"
        android:layout_toRightOf="@+id/custom_bar_title"
        android:layout_marginStart="10dp" />

    <ImageView
        android:id="@+id/message_image_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/custom_bar_seen"
        android:layout_below="@+id/custom_bar_seen"
        android:layout_marginLeft="0dp"
        android:layout_toEndOf="@+id/custom_bar_image"
        android:padding="0dp"
        android:scaleType="centerCrop"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@+id/custom_bar_seen"
        android:layout_toRightOf="@+id/custom_bar_image"
        android:layout_marginStart="0dp"
        android:contentDescription="@string/todo" />

</RelativeLayout>