<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    tools:context=".SplashScreen">

    <RelativeLayout
        android:id="@+id/rellay1"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgView_logo"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/petra" />

        <RelativeLayout
            android:id="@+id/rellay2"
            android:visibility="gone"
            android:layout_below="@+id/imgView_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="261dp"
                android:layout_height="46dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="false"
                android:layout_marginStart="88dp"
                android:layout_marginLeft="96dp"
                android:layout_marginTop="154dp"
                android:layout_marginEnd="62dp"
                android:layout_marginRight="62dp"
                android:text="@string/selamat_datang_di_petrachat"
                android:textSize="18sp" />

            <Button
                android:id="@+id/start_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@+id/textView"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="false"
                android:layout_centerHorizontal="false"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="160dp"
                android:layout_marginRight="153dp"
                android:layout_marginBottom="119dp"
                android:text="@string/login" />

            <Button
                android:id="@+id/start_reg_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="false"
                android:layout_centerInParent="false"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="250dp"
                android:layout_marginTop="360dp"
                android:layout_marginEnd="110dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/dont_have_an_account" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>